--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <script src="js/util.js"></script>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <input type="text" id="nome">
